static/css/base.css
html {
  font-family: sans-serif;
}

body {
  max-width: 720px;
  margin: 0 auto;
  padding: 1rem;
}

header {
  margin: 0 auto 2rem auto;
  a {
    text-decoration: none;
    color: black;
  }

  a:hover {
    text-decoration: underline;
  }

  display: flex;

  a {
    margin-right: 16px;
  }

  a:nth-child(1) {
    margin-right: auto;
  }
}

.home {
  font-weight: bold;
}

article {
  max-width: 720px;
  line-height: 1.3;
}

blockquote {
  margin: 0;
  border-left: 2px solid #ccc;
  padding-left: 1ex;
}

.highlight {
  border: 1px solid #000;
  padding-left: 10px;
  overflow: auto;
}

ul.index {
  list-style: none;
  padding: 0;

  li {
    margin-bottom: 12px;
  }
}

